--- a/HappyDaysOne/Web.config
+++ b/HappyDaysOne/Web.config
@@ -9,9 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-HappyDaysOne-20160827122202.mdf;Initial Catalog=aspnet-HappyDaysOne-20160827122202;Integrated Security=True"
+    <add name="HappyDaysOne.DAL.HappyDaysContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysOne.mdf;Initial Catalog=aspnet-HappyDaysOne;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <!--<add name="HappyDaysOne.DAL.HappyDaysContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysAttempt.mdf;Initial Catalog=HappyDays;Integrated Security=True"
+      providerName="System.Data.SqlClient" />-->
+   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -79,6 +81,12 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <!--just adding a few lines to initialise the db-->
+    <contexts>
+      <context type="HappyDaysOne.DAL.HappyDaysContext, HappyDaysContext">
+        <databaseInitializer type="HappyDaysOne.DAL.HappyDaysInitializer, HappyDaysContext"/>
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
