connection string fine but not loading db from initializer class Object of type 'HappyDaysOne.DAL.HappyDaysInitializer' cannot be converted to type 'System.Data.Entity.IDatabaseInitializer`1[HappyDaysOne.Models.ApplicationDbContext]'.

--- a/HappyDaysOne/Web.config
+++ b/HappyDaysOne/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="HappyDaysOne.DAL.HappyDaysContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysOne.mdf;Initial Catalog=aspnet-HappyDaysOne;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb.mdf;Initial Catalog=HappyDaysTrialDb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <!--<add name="HappyDaysOne.DAL.HappyDaysContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysAttempt.mdf;Initial Catalog=HappyDays;Integrated Security=True"
       providerName="System.Data.SqlClient" />-->
@@ -83,8 +83,8 @@
   <entityFramework>
     <!--just adding a few lines to initialise the db-->
     <contexts>
-      <context type="HappyDaysOne.DAL.HappyDaysContext, HappyDaysContext">
-        <databaseInitializer type="HappyDaysOne.DAL.HappyDaysInitializer, HappyDaysContext"/>
+      <context type="HappyDaysOne.Models.ApplicationDbContext, HappyDaysOne">
+        <databaseInitializer type="HappyDaysOne.DAL.HappyDaysInitializer, HappyDaysOne"/>
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
