--- a/HappyDaysOne/Web.config
+++ b/HappyDaysOne/Web.config
@@ -9,10 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb.mdf;Initial Catalog=HappyDaysTrialDb;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb1.mdf;Initial Catalog=HappyDaysTrialDb1;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <!--<add name="HappyDaysOne.DAL.HappyDaysContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysAttempt.mdf;Initial Catalog=HappyDays;Integrated Security=True"
-      providerName="System.Data.SqlClient" />-->
    </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
