--- a/HappyDaysOne/HappyDaysOne.csproj
+++ b/HappyDaysOne/HappyDaysOne.csproj
@@ -188,6 +188,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609081711389_InitialCreate.cs" />
+    <Compile Include="Migrations\201609081711389_InitialCreate.Designer.cs">
+      <DependentUpon>201609081711389_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201609091310317_RolesUsers.cs" />
+    <Compile Include="Migrations\201609091310317_RolesUsers.Designer.cs">
+      <DependentUpon>201609091310317_RolesUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Activity.cs" />
     <Compile Include="Models\Address.cs" />
@@ -289,6 +298,14 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201609081711389_InitialCreate.resx">
+      <DependentUpon>201609081711389_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609091310317_RolesUsers.resx">
+      <DependentUpon>201609091310317_RolesUsers.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
