--- a/HappyDaysOne/Web.config
+++ b/HappyDaysOne/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb3.mdf;Initial Catalog=HappyDaysTrialDb3;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb4.mdf;Initial Catalog=HappyDaysTrialDb4;Integrated Security=True"
       providerName="System.Data.SqlClient" />
    </connectionStrings>
   <appSettings>
@@ -79,12 +79,12 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <!--just adding a few lines to initialise the db-->
+    <!--just adding a few lines to initialise, seed the db
     <contexts>
       <context type="HappyDaysOne.Models.ApplicationDbContext, HappyDaysOne">
         <databaseInitializer type="HappyDaysOne.DAL.HappyDaysInitializer, HappyDaysOne"/>
       </context>
-    </contexts>
+    </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
