--- a/HappyDaysOne/Web.config
+++ b/HappyDaysOne/Web.config
@@ -11,7 +11,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\HappyDaysTrialDb5.mdf;Initial Catalog=HappyDaysTrialDb5;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-   </connectionStrings>
+    <add name="HappyDaysOneContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=HappyDaysOneContext-20161010114930; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|HappyDaysOneContext-20161010114930.mdf"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
